web_static/styles/6-filters.css
.filters{
    background-color: white;
    height: 70px;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
}
.filters button{
    font-size: 18px;
    background-color: #FF5A5F;
    color: #FFFFFF;
    height: 48px;
    width: 20%;
    border-style: none;
    border-radius: 4px;
    margin-right: 30px;
    margin-left: auto;

}
.filters button:hover{
    opacity: 0.9;
}
.filters .locations, .amenities{
    height: 100%;
    width: 25%;
    margin-left: 5%;
    position: relative;
}
.filters .locations{
    border-right: 1px solid #DDDDDD;
}
h3{
    font-weight: 600;
    margin-bottom: 0px;
}
h4{
    font-weight: 400;
    font-size: 14px;
    margin-top: 0px;
}
.popover{
    background-color: #FAFAFA;
    width: 104%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    margin-left: -20%;
    visibility: hidden;
    padding-bottom: 10%;
}
.locations:hover .popover,
.amenities:hover .popover{
    visibility: visible;
}
.popover h2{
    font-size: 16px;
    margin-bottom: 0px;
}
ul{
    list-style: none;
    margin-left: -5%;
}
.popover li, popover ul{
    line-height: 160%;
}
.amenities .popover{
    padding-top: 20px;
}

